# CrackYourPlacement

./: .gitignore  CMakeLists.txt  README.md  climbingStair.cpp  countingBits.cpp  file.txt  gameOfLife.cpp  kTopFrequentElement.cpp  largestRectabgleHistogram.cpp  maximizeTheSegment.cpp  maxvalueofequation.cpp  rangeSumQuerryImmutable.cpp  requirements.txt  reversepair.cpp  solution.py  uniquePath.cpp
Array/: 3sum.cpp  4sum.cpp  allUniquePermutation.cpp  bestTimeToBuyStockAndSell.cpp  chocolateDistributionProblem.cpp  containerwithmostwater.cpp  findduplicate.cpp  findduplicateinarray.cpp  gameOfLife.cpp  jumpgame.cpp  majorityElement.cpp  maximumpointobtainfromcard.cpp  mergeTwoSortedArray.cpp  movesNonZero.cpp  removeduplicatefromsorted.cpp  setmatrixzero.cpp  spiralorder.cpp  subarraysumdivisblebyk.cpp  subarraysumequalk.cpp  twoSum.cpp  wordSearch.cpp
BItwise/: 1611_minimumonebit_to_make_zero.cpp  convertInBinary.cpp  count_one.cpp  counting_bits.cpp  find_original_array_using_xor.cpp  maximum_score.cpp  minimumflip_using_or.cpp  singlenumber.cpp  sort_using_1_bit.cpp
DP-DynamicProgramming/: AllPossiblePathInMatrix.cpp  besttimetobuystock.cpp  coinChange.cpp  countSquareSubarrayWithOne.cpp  decodeWays.cpp  deleteandearn.cpp  generatepalinedrom.cpp  jumpgame2.cpp  knightDialer.cpp  longestIncSubseq.cpp  maxLengthSubarray.cpp  maxProdArray.cpp  maximalSquare.cpp  maximalrectangle.cpp  minCoin_sum.cpp  minimumPathSum.cpp  mobileNumericKey.cpp  onesAndZeros.cpp  uniquePath.cpp
LinkedList/: palindromeLinkedList.cpp  reverselinkedlist.cpp
Mathmatical/: addBinary.cpp  (+9 more)
(+93 files in other folders)
